trunk/Archive2/94/2b053f33fb0790/output
main.cpp: In instantiation of 'void Concrete<T>::test() [with T = Base<Data>]':
main.cpp:30:12:   required from here
main.cpp:22:5: error: no class template named 'do_it' in 'struct Concrete<>'
     typename Concrete:: template do_it<Val1>();         // I want not write "typename Concrete:: template " each time
     ^
